<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">HR Camera</string>
    <string name="record_figure">Record figure</string>
    <string name="record_list">List of recorded figre</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="ask_get_front_dialog_cancel">no</string>
    <string name="ask_get_front_dialog_title">Do you want to extract figure from background?</string>
    <string name="ask_get_front_dialog_message">Do you want to extract figure from background? In case, please move figure out of camera.</string>
    <string name="remove_figure_dialog_title">I start shooting background after 3 seconds. Please move figure out of camera range. \n Don\'t touch this mobile phone</string>
    <string name="strPickupExec">Extract</string>
    <string name="description">72shot</string>
    <string name="extract_activity_label">extract</string>
    <string name="record_list_label">Select Figure</string>
    <string name="overlay_image_activity_label">ria-ju mode</string>
    <string name="overlay_shot_activity_label">roa-ju mode</string>
    <string name="dialog_message_delete_item"></string>
    <string name="dialog_title_delete_item">Delete item</string>
    <string name="alert_dialog_delete">delete</string>
    <string name="not_extract_message">I don\'t extract figure from this picture yet.</string>
    <string name="overlay_inst_message">Tap or Drag to draw figure. \n Please drag with two fingers to rotate figure.</string>
    <string name="rotate_left">rotate left</string>
    <string name="rotate_right">rotate right</string>
    <string name="figure_exp_up">turn bright</string>
    <string name="figure_exp_down">turn dark</string>
    <string name="figure_feather_up">gradate strong</string>
    <string name="figure_feather_down">gradate weak</string>
    <string name="complete_save_picture">I saved Picture.</string>
    <string name="action_list_dialog">How may I do for this item ? </string>
    <string name="extract_dialog_title">Processing...</string>
    <string name="extract_dialog_message">Please wait for extract processing.</string>
    <string name="encode_dialog_title">Encode.</string>
    <string name="encode_dialog_message">Please wait for encoding.</string>
    <string name="record_dialog_title">Recording</string>
    <string name="record_dialog_message">Please wait for recording. Don\'t touch this mobile phone.</string>
    <string name="record_complete_dialog_title">Complete.</string>
    <string name="record_complete_dialog_message">I complete recording? Do you want to extract right?</string>
    <string name="extract_complete_dialog_title">Complete extract</string>
    <string name="extract_complete_dialog_message">I complete extract processing.</string>
    <string name="instruction_dialog_title">Instruction</string>
    <string name="instruction_dialog_message">Please hold this mobile phone. And start recording after setting. \n After 3 seconds later of recording, I shoot background. So please move figure out of camera range.</string>
    <string name="delete_complete">Delete complete</string>
    <string name="inst_string1">Hold this mobile phone. and start record.</string>
    <string name="inst_string2">I start background recording 3 seconds after record figure. So please move figure out of camera range.</string>
    <string name="inst_step1">step1 : Hold this mobile phone.</string>
    <string name="inst_step2">step2 : Record figure.</string>
    <string name="inst_step3">step3 : Move figure out of camera range.</string>
    <string name="inst_step4">step4 : background record.</string>
    <string name="inst_step5">step5 : Encode</string>
    <string name="inst_ext">Please don\'t touch mobile phone between step2 and step4</string>
    <string name="delete_fake_string">To delete item, please long tap item. \n This button is fake, sorry...</string>
</resources>